# shikanoko-markov

./: .gitignore  README.md  main.py  pyproject.toml  run_multi.py  run_single.py  shikanoko.py
.github/workflows/: python.yml
shikanoko/: shikanoko.py
tests/: test_shikanoko.py
