[project]
name = "shikanoko-markov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ARGI-BERRI", email = "me@endroit.net" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
