[project]
name = "shikanoko-markov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ARGI-BERRI", email = "me@endroit.net" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./shikanoko"]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.10",
    "mypy>=1.15.0",
]
